--- a/Scripting/Quirrel/Quirrel.vcxproj.filters
+++ b/Scripting/Quirrel/Quirrel.vcxproj.filters
@@ -18,27 +18,45 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\Coroutine.cpp">
+    <ClCompile Include="Execution\Coroutines\Coroutine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\CoroutineManager.cpp">
+    <ClCompile Include="Execution\Coroutines\CoroutineManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\VirtualMachine.cpp">
+    <ClCompile Include="Execution\VirtualMachine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Debugger\Debugger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Runtime\Coroutine.hpp">
+    <ClInclude Include="Execution\Coroutines\Coroutine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\CoroutineManager.hpp">
+    <ClInclude Include="Execution\Coroutines\CoroutineManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Config\Defines.hpp">
+    <ClInclude Include="Execution\VirtualMachine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\VirtualMachine.hpp">
+    <ClInclude Include="Language\ObjectTypes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Language\Types.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Execution\Coroutines\InvocationResults.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Execution\Exceptions.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Execution\ThreadExecutionStates.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Debugger\Debugger.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
