--- a/Scripting/Quirrel/QuirrelLibrary/QuirrelLibrary.vcxproj
+++ b/Scripting/Quirrel/QuirrelLibrary/QuirrelLibrary.vcxproj
@@ -9,6 +9,10 @@
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="UnitTest|x64">
+      <Configuration>UnitTest</Configuration>
+      <Platform>x64</Platform>
+    </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
@@ -16,11 +20,11 @@
     <RootNamespace>QuirrelLibrary</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
     <ConfigurationType>StaticLibrary</ConfigurationType>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props"/>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup>
     <IncludePath>$(Usagi_IncludePaths);$(IncludePath)</IncludePath>
     <LibraryPath>$(Usagi_LibraryPaths);$(LibraryPath)</LibraryPath>
@@ -32,122 +36,122 @@
   <PropertyGroup Label="UserMacros">
   </PropertyGroup>
   <ItemGroup>
-    <ClInclude Include="..\quirrel\helpers\keyValueFile.h"/>
-    <ClInclude Include="..\quirrel\include\sqconfig.h"/>
-    <ClInclude Include="..\quirrel\include\sqdirect.h"/>
-    <ClInclude Include="..\quirrel\include\sqext.h"/>
-    <ClInclude Include="..\quirrel\include\sqio.h"/>
-    <ClInclude Include="..\quirrel\include\sqstdaux.h"/>
-    <ClInclude Include="..\quirrel\include\sqstdblob.h"/>
-    <ClInclude Include="..\quirrel\include\sqstddatetime.h"/>
-    <ClInclude Include="..\quirrel\include\sqstddebug.h"/>
-    <ClInclude Include="..\quirrel\include\sqstdio.h"/>
-    <ClInclude Include="..\quirrel\include\sqstdmath.h"/>
-    <ClInclude Include="..\quirrel\include\sqstdstring.h"/>
-    <ClInclude Include="..\quirrel\include\sqstdsystem.h"/>
-    <ClInclude Include="..\quirrel\include\squirrel.h"/>
-    <ClInclude Include="..\quirrel\internal\sqstringlib.h"/>
-    <ClInclude Include="..\quirrel\sqmodules\helpers.h"/>
-    <ClInclude Include="..\quirrel\sqmodules\path.h"/>
-    <ClInclude Include="..\quirrel\sqmodules\span.h"/>
-    <ClInclude Include="..\quirrel\sqmodules\sqmodules.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratAllocator.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratArray.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratClass.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratClassType.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratConst.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratFunction.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratGlobalMethods.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratMemberMethods.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratObject.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratScript.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratTable.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratTypes.h"/>
-    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratUtil.h"/>
-    <ClInclude Include="..\quirrel\sqstdlib\sqstdblobimpl.h"/>
-    <ClInclude Include="..\quirrel\sqstdlib\sqstdserialization.h"/>
-    <ClInclude Include="..\quirrel\sqstdlib\sqstdstream.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\arena.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\ast.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\ast_dump.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\ast_indent_render.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\ast_render.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\codegen.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\compilationcontext.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\compiler.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\constgen.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\lexer.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\lex_tokens.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\optimizations\closureHoisting.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\optimizer.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\parser.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\sqfuncstate.h"/>
-    <ClInclude Include="..\quirrel\squirrel\compiler\static_analyzer\analyzer.h"/>
-    <ClInclude Include="..\quirrel\squirrel\opcodes.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqarray.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqclass.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqclosure.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqfuncproto.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqobject.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqpcheader.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqstate.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqstring.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqtable.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqtypeparser.h"/>
-    <ClInclude Include="..\quirrel\squirrel\squserdata.h"/>
-    <ClInclude Include="..\quirrel\squirrel\squtils.h"/>
-    <ClInclude Include="..\quirrel\squirrel\sqvm.h"/>
-    <ClInclude Include="..\quirrel\squirrel\vartrace.h"/>
+    <ClInclude Include="..\quirrel\helpers\keyValueFile.h" />
+    <ClInclude Include="..\quirrel\include\sqconfig.h" />
+    <ClInclude Include="..\quirrel\include\sqdirect.h" />
+    <ClInclude Include="..\quirrel\include\sqext.h" />
+    <ClInclude Include="..\quirrel\include\sqio.h" />
+    <ClInclude Include="..\quirrel\include\sqstdaux.h" />
+    <ClInclude Include="..\quirrel\include\sqstdblob.h" />
+    <ClInclude Include="..\quirrel\include\sqstddatetime.h" />
+    <ClInclude Include="..\quirrel\include\sqstddebug.h" />
+    <ClInclude Include="..\quirrel\include\sqstdio.h" />
+    <ClInclude Include="..\quirrel\include\sqstdmath.h" />
+    <ClInclude Include="..\quirrel\include\sqstdstring.h" />
+    <ClInclude Include="..\quirrel\include\sqstdsystem.h" />
+    <ClInclude Include="..\quirrel\include\squirrel.h" />
+    <ClInclude Include="..\quirrel\internal\sqstringlib.h" />
+    <ClInclude Include="..\quirrel\sqmodules\helpers.h" />
+    <ClInclude Include="..\quirrel\sqmodules\path.h" />
+    <ClInclude Include="..\quirrel\sqmodules\span.h" />
+    <ClInclude Include="..\quirrel\sqmodules\sqmodules.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratAllocator.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratArray.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratClass.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratClassType.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratConst.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratFunction.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratGlobalMethods.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratMemberMethods.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratObject.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratScript.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratTable.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratTypes.h" />
+    <ClInclude Include="..\quirrel\sqrat\include\sqrat\sqratUtil.h" />
+    <ClInclude Include="..\quirrel\sqstdlib\sqstdblobimpl.h" />
+    <ClInclude Include="..\quirrel\sqstdlib\sqstdserialization.h" />
+    <ClInclude Include="..\quirrel\sqstdlib\sqstdstream.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\arena.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\ast.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\ast_dump.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\ast_indent_render.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\ast_render.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\codegen.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\compilationcontext.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\compiler.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\constgen.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\lexer.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\lex_tokens.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\optimizations\closureHoisting.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\optimizer.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\parser.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\sqfuncstate.h" />
+    <ClInclude Include="..\quirrel\squirrel\compiler\static_analyzer\analyzer.h" />
+    <ClInclude Include="..\quirrel\squirrel\opcodes.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqarray.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqclass.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqclosure.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqfuncproto.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqobject.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqpcheader.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqstate.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqstring.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqtable.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqtypeparser.h" />
+    <ClInclude Include="..\quirrel\squirrel\squserdata.h" />
+    <ClInclude Include="..\quirrel\squirrel\squtils.h" />
+    <ClInclude Include="..\quirrel\squirrel\sqvm.h" />
+    <ClInclude Include="..\quirrel\squirrel\vartrace.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\quirrel\sqmodules\deffileaccess.cpp"/>
-    <ClCompile Include="..\quirrel\sqmodules\helpers.cpp"/>
-    <ClCompile Include="..\quirrel\sqmodules\path.cpp"/>
-    <ClCompile Include="..\quirrel\sqmodules\sqmodules.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdaux.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdblob.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstddatetime.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstddebug.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdio.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdmath.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdrex.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdserialization.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdstream.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdstring.cpp"/>
-    <ClCompile Include="..\quirrel\sqstdlib\sqstdsystem.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\ast.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\codegen.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\compilationcontext.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\compiler.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\constgen.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\lexer.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\optimizations\closureHoisting.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\optimizer.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\parser.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\sqfuncstate.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\sqio.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\compiler\static_analyzer\analyzer.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqapi.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqbaselib.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqclass.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqdebug.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqdedupshrinker.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqdirect.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqext.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqmem.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqobject.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqstate.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqstringlib.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqtable.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqtypeparser.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\sqvm.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\vartrace.cpp"/>
-    <ClCompile Include="..\quirrel\squirrel\vartracestub.cpp"/>
+    <ClCompile Include="..\quirrel\sqmodules\deffileaccess.cpp" />
+    <ClCompile Include="..\quirrel\sqmodules\helpers.cpp" />
+    <ClCompile Include="..\quirrel\sqmodules\path.cpp" />
+    <ClCompile Include="..\quirrel\sqmodules\sqmodules.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdaux.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdblob.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstddatetime.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstddebug.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdio.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdmath.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdrex.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdserialization.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdstream.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdstring.cpp" />
+    <ClCompile Include="..\quirrel\sqstdlib\sqstdsystem.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\ast.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\codegen.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\compilationcontext.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\compiler.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\constgen.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\lexer.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\optimizations\closureHoisting.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\optimizer.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\parser.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\sqfuncstate.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\sqio.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\compiler\static_analyzer\analyzer.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqapi.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqbaselib.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqclass.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqdebug.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqdedupshrinker.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqdirect.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqext.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqmem.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqobject.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqstate.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqstringlib.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqtable.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqtypeparser.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\sqvm.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\vartrace.cpp" />
+    <ClCompile Include="..\quirrel\squirrel\vartracestub.cpp" />
     <!-- This is the compiler driver. We don't need it for a static library. -->
     <!-- <ClCompile Include="..\quirrel\sq\sq.cpp" />-->
   </ItemGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets"/>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
 </Project>
