logging: remove spdlog includes from user facing headers

--- a/Runtime/Logging/Logging.vcxproj
+++ b/Runtime/Logging/Logging.vcxproj
@@ -40,6 +40,7 @@
   <PropertyGroup Label="UserMacros">
   </PropertyGroup>
   <ItemGroup>
+    <ClInclude Include="LoggingLevels.hpp" />
     <ClInclude Include="RuntimeLogger.hpp"/>
   </ItemGroup>
   <ItemGroup>
