--- a/Scripting/Quirrel/QuirrelScripting.vcxproj
+++ b/Scripting/Quirrel/QuirrelScripting.vcxproj
@@ -17,12 +17,13 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
     <ProjectGuid>{df92a7df-7907-4bd7-8153-ad25f30047b4}</ProjectGuid>
-    <RootNamespace>Quirrel</RootNamespace>
+    <RootNamespace>QuirrelScripting</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
     <ConfigurationType>Application</ConfigurationType>
+    <RootNamespace>QuirrelScripting</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='UnitTest'">
     <ConfigurationType>Application</ConfigurationType>
@@ -44,7 +45,9 @@
     <ClInclude Include="Execution\Coroutines\Coroutine.hpp" />
     <ClInclude Include="Execution\Coroutines\CoroutineManager.hpp" />
     <ClInclude Include="Execution\Coroutines\InvocationResults.hpp" />
+    <ClInclude Include="Execution\Coroutines\SystemQuirrelTickCoroutines.hpp" />
     <ClInclude Include="Execution\Exceptions.hpp" />
+    <ClInclude Include="Execution\Execution.hpp" />
     <ClInclude Include="Execution\ThreadExecutionStates.hpp" />
     <ClInclude Include="Execution\VirtualMachine.hpp" />
     <ClInclude Include="Language\ObjectTypes.hpp" />
@@ -64,7 +67,9 @@
     <ClCompile Include="Debugger\Debugger.cpp" />
     <ClCompile Include="Execution\Coroutines\Coroutine.cpp" />
     <ClCompile Include="Execution\Coroutines\CoroutineManager.cpp" />
+    <ClCompile Include="Execution\ExecutionStaticTests.cpp" />
     <ClCompile Include="Execution\VirtualMachine.cpp" />
+    <ClCompile Include="Language\Types.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
